Fixed LinkedIn metatag url.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,700&display=swap" rel="stylesheet">
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-<meta name="image" property="og:image" content="images/quantum-craft-responsive-website-linkedin-image.jpg">
+<meta name="image" property="og:image:secure_url" content="images/quantum-craft-responsive-website-linkedin-image.jpg">
 </head>
 
 <body>
